fixing issues with letters not showing

--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ li {
 .canvas {
 	display: inline-block;
 	border: 1px solid;
+	width: 100px;
+	height: 100px;
+	text-align: center;
+	font-weight: 200;
+	font-size: 100px;
+	overflow: hidden;
 }
 
 .board {
